# covid

./: README.md  covid.py  prognosis.py  pyproject.toml
